cxx/pip_boy/include/fwwasm.h

#define FWGUI_EVENT_GRAY_BUTTON 0
#define FWGUI_EVENT_YELLOW_BUTTON 1
#define FWGUI_EVENT_GREEN_BUTTON 2
#define FWGUI_EVENT_BLUE_BUTTON 3
#define FWGUI_EVENT_RED_BUTTON 4
#define FWGUI_EVENT_IR_CODE 5
#define FWGUI_EVENT_GUI_BUTTON 6
#define FWGUI_EVENT_GUI_NUMEDIT 7
#define FWGUI_EVENT_GUI_TEXTEDIT 8
#define FWGUI_EVENT_GUI_AUDIO_DATA 9
#define FWGUI_EVENT_GUI_FFT_DATA 10
#define FWGUI_EVENT_GUI_I2C_RESPONSE 11
#define FWGUI_EVENT_EVENTFIFO_OVERFLOW 12
#define FWGUI_EVENT_GUI_RTC_RESPONSE 13
#define FWGUI_EVENT_GUI_SENSOR_DATA 14
#define FWGUI_EVENT_MAIN_APP_SEL 15
#define FWGUI_EVENT_PANEL_SHOW 16
#define FWGUI_EVENT_PICKLIST_SEL 17
#define FWGUI_EVENT_PANEL_HIDE 18
#define FWGUI_EVENT_MAIN_MENU_SHOWN 19
#define FWGUI_EVENT_STARTED 20
#define FWGUI_EVENT_CLR_STATS 21
#define FWGUI_EVENT_DIALOG_ACTION 22
#define FWGUI_EVENT_WASM_OVRFLOW 23
#define FWGUI_EVENT_NUMTYPE_INT 1
#define FWGUI_EVENT_NUMTYPE_UINT 2
#define FWGUI_EVENT_NUMTYPE_FLOAT 3
#define RPFWGUI_EVENT_DATA_MAX 34
// general
void waitms(int iMilliseconds) WASM_IMPORT("waitms");  // tested
// gpio
void setled(int iOn) WASM_IMPORT("setled");           // tested
void setIO(int iGPIO, int iOn) WASM_IMPORT("setIO");  // implemented
unsigned int getIO(int iGPIO) WASM_IMPORT("getIO");   // implemented
unsigned int getAllIO() WASM_IMPORT("getAllIO");      // implemented
// i2c
int i2cRead(int iAddress, int iRegister, unsigned char *pBytes, int iLength) WASM_IMPORT("i2cRead");    // implemented
int i2cWrite(int iAddress, int iRegister, unsigned char *pBytes, int iLength) WASM_IMPORT("i2cWrite");  // implemented
// SPI
int SPIReadWrite(unsigned char *pBytesIn, int iLength, unsigned char *pBytesOut)
    WASM_IMPORT("SPIReadWrite");  // implemented (dont like no chip select)
// UART
int UARTDataRxCount() WASM_IMPORT("UARTDataRxCount");                                  // implemented
int UARTDataRead(unsigned char *pBytesOut, int iLength) WASM_IMPORT("UARTDataRead");   // implemented
int UARTDataWrite(unsigned char *pBytesIn, int iLength) WASM_IMPORT("UARTDataWrite");  // implemented
// PWM
int PWMSetFreqDuty(int iGPIO, float fFreq, float fDuty) WASM_IMPORT("PWMSetFreqDuty");  // implemeted
int PWMStop(int iGPIO) WASM_IMPORT("PWMStop");                                          // implemented
// radio
int RadioWrite(int iRadioIndex, unsigned char *btBytes, int iLength) WASM_IMPORT("RadioWrite");
int RadioRead(int iRadioIndex, unsigned char *btBytes, int iLength) WASM_IMPORT("RadioRead");
int RadioGetRxCount(int iRadioIndex) WASM_IMPORT("RadioGetRxCount");
int RadioLoadConfig(int iRadioIndex, unsigned char *btBytes, int iLength) WASM_IMPORT("RadioLoadConfig");
int RadioTxSubFile(int iRadioIndex, char *szSoundPath) WASM_IMPORT("RadioTxSubFile");
 
int RadioSetTx(int iRadioIndex) WASM_IMPORT("RadioSetTx");
 
int RadioSetRx(int iRadioIndex) WASM_IMPORT("RadioSetRx");
 
int RadioSetIdle(int iRadioIndex) WASM_IMPORT("RadioSetIdle");
 

// ir
void sendIRData(unsigned int iData) WASM_IMPORT("sendIRData");  // implemented
// LEDs
enum LEDManagerLEDMode {
    ledsimplevalue,
    ledflash,
    ledpulse,
    ledflashfade,
    ledpulsefade,
};
enum ePanelColorLED {
    LEDColorRed,
    LEDColorGreen,
    LEDColorYellow,
    LEDColorBlue,
    LEDColorOrange,
    LEDColorAqua,
    LEDColorMagenta,
    LEDColorWhite,
};
enum ePanelSizeLED {
    LEDSize32,
    LEDSize48,
    LEDSize64,
};
void setBoardLED(int iLEDIndex0_7, int iR, int iG, int iB, int iDurationMs, enum LEDManagerLEDMode iMode)
    WASM_IMPORT("setBoardLED");                                   // tested
void setLEDShowMode(int iLEDShow) WASM_IMPORT("setLEDShowMode");  // tested
// sound speaker
void playSoundFromFile(char *szSoundPath) WASM_IMPORT("playSoundFromFile");                         // implemented
void playSoundFromNameOrID(const char *szSoundName, int iID) WASM_IMPORT("playSoundFromNameOrID");  // tested
void playSoundFromNumber(int bFloat, int iNumber, float fNumber, int iFloatDigits)
    WASM_IMPORT("playSoundFromNumber");  // tested
// fileio
int openFile(char *szFileName, int iForWriting) WASM_IMPORT("OpenFile");                                // implemented
int closeFile(int iHandle) WASM_IMPORT("closeFile");                                                    // implemented
int writeFile(int iHandle, unsigned char *btBytes, int iNumByte) WASM_IMPORT("writeFile");              // implemented
int preAllocateSpaceForFile(int iHandle, int iFileSizeInBytes) WASM_IMPORT("preAllocateSpaceForFile");  // implemented
int readFile(int iHandle, unsigned char *btBytes, int *iNumBytes) WASM_IMPORT("readFile");              // implemented
int readFileLine(int iHandle, char *btBytes, int *iNumBytes) WASM_IMPORT("readFileLine");               // implemented
int setFilePosition(int iHandle, int iPosition) WASM_IMPORT("setFilePosition");                         // implemented
int getFilePosition(int iHandle) WASM_IMPORT("getFilePosition");                                        // implemented
int getFileSize(int iHandle) WASM_IMPORT("getFileSize");                                                // implemented
// file system
int renameFileOrDirectory(const char *szDirectoryOrFileName, const char *szNewDirectoryOrFileName)
    WASM_IMPORT("renameFileOrDirectory");                          // implemented
int fileExists(char *szFilePath) WASM_IMPORT("fileExists");        // implemented
int makeDirectory(char *szFilePath) WASM_IMPORT("makeDirectory");  // implemented
int changeDirectory(char *szFilePath) WASM_IMPORT("changeDirectory") WASM_IMPORT("changeDirectory");
int getDirectoryItemByIndex(const char *szPathDirectory, char *szFileName, int bIncludeExtension, int iIndex)
    WASM_IMPORT("getDirectoryItemByIndex");                                        // implemented
void getVolumeInfo(int *piFree, int *piTotal) WASM_IMPORT("getVolumeInfo");        // implemented
int removeFileOrDirectory(char *szFilePath) WASM_IMPORT("removeFileOrDirectory");  // implemented
// user interface
#define FW_GET_EVENT_DATA_MAX 34
int getEventData(unsigned char *pData) WASM_IMPORT("getEventData");  // tested
int hasEvent() WASM_IMPORT("hasEvent");                              // tested
// Panel Apis
void addPanel(int iPanelIndex, int iVisible, int iInRotation, int iUseTile, int iTileID, unsigned char iR,
              unsigned char iG, unsigned iB, int iShowMenu) WASM_IMPORT("addPanel");  // tested
void addPanelPickList(int iPanelIndex, const char *szCaption, int iTileID, int iIconID, unsigned char iRBack,
                      unsigned char iGBack, unsigned iBBack, unsigned char iRFore, unsigned char iGFore,
                      unsigned iBFore, int iLogIndex) WASM_IMPORT("addPanelPickList");  // implemented
void setPanelMenuText(int iPanel, int iButtonGreyFromZero, const char *szMessage)
    WASM_IMPORT("setPanelMenuText");  // tested
////////// controls
void addControlLED(int iPanelIndex, int iControlIndex, int iX, int iY, enum ePanelColorLED iColor, enum ePanelSizeLED iSize,
                   int iIntialState) WASM_IMPORT("addControlLED");  // redefined and implemented