rust/pip_boy/src/fwwasm.rs

/* automatically generated by rust-bindgen 0.69.4 */

#![allow(non_upper_case_globals, unused, dead_code)]

pub const FWGUI_EVENT_GRAY_BUTTON: u32 = 0;
pub const FWGUI_EVENT_YELLOW_BUTTON: u32 = 1;
pub const FWGUI_EVENT_GREEN_BUTTON: u32 = 2;
pub const FWGUI_EVENT_BLUE_BUTTON: u32 = 3;
pub const FWGUI_EVENT_RED_BUTTON: u32 = 4;
pub const FWGUI_EVENT_IR_CODE: u32 = 5;
pub const FWGUI_EVENT_GUI_BUTTON: u32 = 6;
pub const FWGUI_EVENT_GUI_NUMEDIT: u32 = 7;
pub const FWGUI_EVENT_GUI_TEXTEDIT: u32 = 8;
pub const FWGUI_EVENT_GUI_AUDIO_DATA: u32 = 9;
pub const FWGUI_EVENT_GUI_FFT_DATA: u32 = 10;
pub const FWGUI_EVENT_GUI_I2C_RESPONSE: u32 = 11;
pub const FWGUI_EVENT_EVENTFIFO_OVERFLOW: u32 = 12;
pub const FWGUI_EVENT_GUI_RTC_RESPONSE: u32 = 13;
pub const FWGUI_EVENT_GUI_SENSOR_DATA: u32 = 14;
pub const FWGUI_EVENT_MAIN_APP_SEL: u32 = 15;
pub const FWGUI_EVENT_PANEL_SHOW: u32 = 16;
pub const FWGUI_EVENT_PICKLIST_SEL: u32 = 17;
pub const FWGUI_EVENT_PANEL_HIDE: u32 = 18;
pub const FWGUI_EVENT_MAIN_MENU_SHOWN: u32 = 19;
pub const FWGUI_EVENT_STARTED: u32 = 20;
pub const FWGUI_EVENT_CLR_STATS: u32 = 21;
pub const FWGUI_EVENT_DIALOG_ACTION: u32 = 22;
pub const FWGUI_EVENT_WASM_OVRFLOW: u32 = 23;
pub const FWGUI_EVENT_NUMTYPE_INT: u32 = 1;
pub const FWGUI_EVENT_NUMTYPE_UINT: u32 = 2;
pub const FWGUI_EVENT_NUMTYPE_FLOAT: u32 = 3;
pub const RPFWGUI_EVENT_DATA_MAX: u32 = 34;
pub const FW_GET_EVENT_DATA_MAX: u32 = 34;
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn waitms(iMilliseconds: ::core::ffi::c_int);
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn setled(iOn: ::core::ffi::c_int);
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn setIO(iGPIO: ::core::ffi::c_int, iOn: ::core::ffi::c_int);
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn getIO(iGPIO: ::core::ffi::c_int) -> ::core::ffi::c_uint;
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn getAllIO() -> ::core::ffi::c_uint;
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn i2cRead(
        iAddress: ::core::ffi::c_int,
        iRegister: ::core::ffi::c_int,
        pBytes: *mut ::core::ffi::c_uchar,
        iLength: ::core::ffi::c_int,
    ) -> ::core::ffi::c_int;
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn i2cWrite(
        iAddress: ::core::ffi::c_int,
        iRegister: ::core::ffi::c_int,
        pBytes: *mut ::core::ffi::c_uchar,
        iLength: ::core::ffi::c_int,
    ) -> ::core::ffi::c_int;
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn SPIReadWrite(
        pBytesIn: *mut ::core::ffi::c_uchar,
        iLength: ::core::ffi::c_int,
        pBytesOut: *mut ::core::ffi::c_uchar,
    ) -> ::core::ffi::c_int;
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn UARTDataRxCount() -> ::core::ffi::c_int;
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn UARTDataRead(
        pBytesOut: *mut ::core::ffi::c_uchar,
        iLength: ::core::ffi::c_int,
    ) -> ::core::ffi::c_int;
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn UARTDataWrite(
        pBytesIn: *mut ::core::ffi::c_uchar,
        iLength: ::core::ffi::c_int,
    ) -> ::core::ffi::c_int;
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn PWMSetFreqDuty(iGPIO: ::core::ffi::c_int, fFreq: f32, fDuty: f32) -> ::core::ffi::c_int;
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn PWMStop(iGPIO: ::core::ffi::c_int) -> ::core::ffi::c_int;
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn RadioWrite(
        iRadioIndex: ::core::ffi::c_int,
        btBytes: *mut ::core::ffi::c_uchar,
        iLength: ::core::ffi::c_int,
    ) -> ::core::ffi::c_int;
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn RadioRead(
        iRadioIndex: ::core::ffi::c_int,
        btBytes: *mut ::core::ffi::c_uchar,
        iLength: ::core::ffi::c_int,
    ) -> ::core::ffi::c_int;
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn RadioGetRxCount(iRadioIndex: ::core::ffi::c_int) -> ::core::ffi::c_int;
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn RadioLoadConfig(
        iRadioIndex: ::core::ffi::c_int,
        btBytes: *mut ::core::ffi::c_uchar,
        iLength: ::core::ffi::c_int,
    ) -> ::core::ffi::c_int;
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn RadioTxSubFile(
        iRadioIndex: ::core::ffi::c_int,
        szSoundPath: *mut ::core::ffi::c_char,
    ) -> ::core::ffi::c_int;
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn RadioSetTx(iRadioIndex: ::core::ffi::c_int) -> ::core::ffi::c_int;
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn RadioSetRx(iRadioIndex: ::core::ffi::c_int) -> ::core::ffi::c_int;
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn RadioSetIdle(iRadioIndex: ::core::ffi::c_int) -> ::core::ffi::c_int;
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn sendIRData(iData: ::core::ffi::c_uint);
}
pub const LEDManagerLEDMode_ledsimplevalue: LEDManagerLEDMode = 0;
pub const LEDManagerLEDMode_ledflash: LEDManagerLEDMode = 1;
pub const LEDManagerLEDMode_ledpulse: LEDManagerLEDMode = 2;
pub const LEDManagerLEDMode_ledflashfade: LEDManagerLEDMode = 3;
pub const LEDManagerLEDMode_ledpulsefade: LEDManagerLEDMode = 4;
pub type LEDManagerLEDMode = ::core::ffi::c_uint;
pub const ePanelColorLED_LEDColorRed: ePanelColorLED = 0;
pub const ePanelColorLED_LEDColorGreen: ePanelColorLED = 1;
pub const ePanelColorLED_LEDColorYellow: ePanelColorLED = 2;
pub const ePanelColorLED_LEDColorBlue: ePanelColorLED = 3;
pub const ePanelColorLED_LEDColorOrange: ePanelColorLED = 4;
pub const ePanelColorLED_LEDColorAqua: ePanelColorLED = 5;
pub const ePanelColorLED_LEDColorMagenta: ePanelColorLED = 6;
pub const ePanelColorLED_LEDColorWhite: ePanelColorLED = 7;
pub type ePanelColorLED = ::core::ffi::c_uint;
pub const ePanelSizeLED_LEDSize32: ePanelSizeLED = 0;
pub const ePanelSizeLED_LEDSize48: ePanelSizeLED = 1;
pub const ePanelSizeLED_LEDSize64: ePanelSizeLED = 2;
pub type ePanelSizeLED = ::core::ffi::c_uint;
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn setBoardLED(
        iLEDIndex0_7: ::core::ffi::c_int,
        iR: ::core::ffi::c_int,
        iG: ::core::ffi::c_int,
        iB: ::core::ffi::c_int,
        iDurationMs: ::core::ffi::c_int,
        iMode: LEDManagerLEDMode,
    );
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn setLEDShowMode(iLEDShow: ::core::ffi::c_int);
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn playSoundFromFile(szSoundPath: *mut ::core::ffi::c_char);
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn playSoundFromNameOrID(szSoundName: *const ::core::ffi::c_char, iID: ::core::ffi::c_int);
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn playSoundFromNumber(
        bFloat: ::core::ffi::c_int,
        iNumber: ::core::ffi::c_int,
        fNumber: f32,
        iFloatDigits: ::core::ffi::c_int,
    );
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn openFile(
        szFileName: *mut ::core::ffi::c_char,
        iForWriting: ::core::ffi::c_int,
    ) -> ::core::ffi::c_int;
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn closeFile(iHandle: ::core::ffi::c_int) -> ::core::ffi::c_int;
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn writeFile(
        iHandle: ::core::ffi::c_int,
        btBytes: *mut ::core::ffi::c_uchar,
        iNumByte: ::core::ffi::c_int,
    ) -> ::core::ffi::c_int;
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn preAllocateSpaceForFile(
        iHandle: ::core::ffi::c_int,
        iFileSizeInBytes: ::core::ffi::c_int,
    ) -> ::core::ffi::c_int;
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn readFile(
        iHandle: ::core::ffi::c_int,
        btBytes: *mut ::core::ffi::c_uchar,
        iNumBytes: *mut ::core::ffi::c_int,
    ) -> ::core::ffi::c_int;
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn readFileLine(
        iHandle: ::core::ffi::c_int,
        btBytes: *mut ::core::ffi::c_char,
        iNumBytes: *mut ::core::ffi::c_int,
    ) -> ::core::ffi::c_int;
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn setFilePosition(
        iHandle: ::core::ffi::c_int,
        iPosition: ::core::ffi::c_int,
    ) -> ::core::ffi::c_int;
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn getFilePosition(iHandle: ::core::ffi::c_int) -> ::core::ffi::c_int;
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn getFileSize(iHandle: ::core::ffi::c_int) -> ::core::ffi::c_int;
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn renameFileOrDirectory(
        szDirectoryOrFileName: *const ::core::ffi::c_char,
        szNewDirectoryOrFileName: *const ::core::ffi::c_char,
    ) -> ::core::ffi::c_int;
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn fileExists(szFilePath: *mut ::core::ffi::c_char) -> ::core::ffi::c_int;
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn makeDirectory(szFilePath: *mut ::core::ffi::c_char) -> ::core::ffi::c_int;
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn changeDirectory(szFilePath: *mut ::core::ffi::c_char) -> ::core::ffi::c_int;
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn getDirectoryItemByIndex(
        szPathDirectory: *const ::core::ffi::c_char,
        szFileName: *mut ::core::ffi::c_char,
        bIncludeExtension: ::core::ffi::c_int,
        iIndex: ::core::ffi::c_int,
    ) -> ::core::ffi::c_int;
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn getVolumeInfo(piFree: *mut ::core::ffi::c_int, piTotal: *mut ::core::ffi::c_int);
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn removeFileOrDirectory(szFilePath: *mut ::core::ffi::c_char) -> ::core::ffi::c_int;
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn getEventData(pData: *mut ::core::ffi::c_uchar) -> ::core::ffi::c_int;
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn hasEvent() -> ::core::ffi::c_int;
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn addPanel(
        iPanelIndex: ::core::ffi::c_int,
        iVisible: ::core::ffi::c_int,
        iInRotation: ::core::ffi::c_int,
        iUseTile: ::core::ffi::c_int,
        iTileID: ::core::ffi::c_int,
        iR: ::core::ffi::c_uchar,
        iG: ::core::ffi::c_uchar,
        iB: ::core::ffi::c_uint,
        iShowMenu: ::core::ffi::c_int,
    );
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn addPanelPickList(
        iPanelIndex: ::core::ffi::c_int,
        szCaption: *const ::core::ffi::c_char,
        iTileID: ::core::ffi::c_int,
        iIconID: ::core::ffi::c_int,
        iRBack: ::core::ffi::c_uchar,
        iGBack: ::core::ffi::c_uchar,
        iBBack: ::core::ffi::c_uint,
        iRFore: ::core::ffi::c_uchar,
        iGFore: ::core::ffi::c_uchar,
        iBFore: ::core::ffi::c_uint,
        iLogIndex: ::core::ffi::c_int,
    );
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn setPanelMenuText(
        iPanel: ::core::ffi::c_int,
        iButtonGreyFromZero: ::core::ffi::c_int,
        szMessage: *const ::core::ffi::c_char,
    );
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    #[doc = " controls"]
    pub fn addControlLED(
        iPanelIndex: ::core::ffi::c_int,
        iControlIndex: ::core::ffi::c_int,
        iX: ::core::ffi::c_int,
        iY: ::core::ffi::c_int,
        iColor: ePanelColorLED,
        iSize: ePanelSizeLED,
        iIntialState: ::core::ffi::c_int,
    );
}
